# ansible-playbook-workstation

./: .pre-commit-config.yaml  Makefile  package-lock.json  package.json  pyproject.toml
.github/workflows/: default.yaml  on-pr.yaml
