[tool.poetry]
name = "ansible-playbook-workstation"
version = "0.0.0"
description = "Ansible playbook that I use to configure my workstations."
authors = ["Kyle Finley <kyle@finley.sh>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"

ansible = "^5.0.1"
pygments = { version = "^2.11.2", optional = true }  # docs
recommonmark = { version = "^0.7.1", optional = true }  # docs
sphinx = { version = "^4.3.1", optional = true }  # docs
sphinx-rtd-theme = { version = "^1.0.0", optional = true }  # docs
sphinxcontrib-apidoc = { version = "^0.3", optional = true }  # docs

[tool.poetry.dev-dependencies]
ansible-lint = { extras = ["community", "yamllint"], version = "^5.3.1" }
pre-commit = "^2.16.0"

[tool.poetry.extras]
docs = [
  "pygments",
  "recommonmark",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinxcontrib-apidoc",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
